--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node src/server.js",
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "postinstall": "ng build --aot --prod",
+    "heroku-postbuild": "ng build --aot --prod",
     "e2e": "protractor"
   },
   "private": true,
