--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
   },
   "private": true,
   "dependencies": {
-    "angular-cli": "1.0.0-beta.28.3",
-    "@angular/compiler-cli": "^2.3.1",
     "@angular/common": "^2.3.1",
     "@angular/compiler": "^2.3.1",
+    "@angular/compiler-cli": "^2.3.1",
     "@angular/core": "^2.3.1",
     "@angular/forms": "^2.3.1",
     "@angular/http": "^2.3.1",
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "angular-cli": "1.0.0-beta.28.3",
     "core-js": "^2.4.1",
     "express": "^4.17.1",
     "path": "^0.12.7",
@@ -35,6 +35,7 @@
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
     "codelyzer": "~2.0.0-beta.1",
+    "enhanced-resolve": "^3.3.0",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
