--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js",
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "heroku-postbuild": "ng build --aot --prod",
+    "heroku-postbuild": "cd src && npm install --only=dev && npm install && npm run build",
     "e2e": "protractor"
   },
   "private": true,
