--- a/package.json
+++ b/package.json
@@ -1,54 +1,56 @@
 {
-  "name": "video-portfolio-app",
+  "name": "angular-front",
   "version": "0.0.0",
-  "license": "MIT",
-  "angular-cli": {},
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
+    "build": "ng build",
     "test": "ng test",
-    "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "heroku-postbuild": "cd src && npm install --only=dev && npm install && npm run build",
-    "e2e": "protractor"
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.4.10",
-    "@angular/compiler": "^2.3.1",
-    "@angular/compiler-cli": "^2.3.1",
-    "@angular/core": "^2.3.1",
-    "@angular/forms": "^2.3.1",
-    "@angular/http": "^2.3.1",
-    "@angular/platform-browser": "^2.3.1",
-    "@angular/platform-browser-dynamic": "^2.3.1",
-    "@angular/router": "^3.3.1",
-    "angular-cli": "1.0.0-beta.28.3",
-    "core-js": "^2.4.1",
+    "@angular/animations": "~8.2.13",
+    "@angular/cli": "~8.3.18",
+    "@angular/common": "~8.2.13",
+    "@angular/compiler": "~8.2.13",
+    "@angular/compiler-cli": "~8.2.13",
+    "@angular/core": "~8.2.13",
+    "@angular/forms": "~8.2.13",
+    "@angular/platform-browser": "~8.2.13",
+    "@angular/platform-browser-dynamic": "~8.2.13",
+    "@angular/router": "~8.2.13",
     "express": "^4.17.1",
     "path": "^0.12.7",
-    "rxjs": "^5.0.1",
-    "ts-helpers": "^1.1.1",
-    "typescript": "~2.0.3",
-    "zone.js": "^0.7.2"
+    "rxjs": "~6.4.0",
+    "tslib": "^1.10.0",
+    "typescript": "~3.5.3",
+    "yarn": "^1.19.1",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@types/jasmine": "2.5.38",
-    "@types/node": "^6.0.42",
-    "codelyzer": "~2.0.0-beta.1",
+    "@angular-devkit/build-angular": "~0.803.18",
+    "@angular/language-service": "~8.2.13",
+    "@types/jasmine": "~3.3.8",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "^5.0.0",
     "enhanced-resolve": "^3.3.0",
-    "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "2.5.0",
-    "karma": "1.2.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
-    "protractor": "~4.0.13",
-    "ts-node": "1.2.1",
-    "tslint": "^4.3.0"
+    "jasmine-core": "~3.4.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.1.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.15.0"
   },
   "engines": {
-    "node": "~10.16.3",
-    "npm": "~6.9.0"
+    "node": "10.16.3",
+    "npm": "6.13.0"
   }
 }
