--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
+    "@auth0/angular-jwt": "^3.0.1",
+    "angular-jwt": "^0.1.11",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "path": "^0.12.7",
