--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
     "@auth0/angular-jwt": "^3.0.1",
+    "@auth0/auth0-spa-js": "^1.6.4",
     "angular-jwt": "^0.1.11",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
