--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "angular-jwt": "^0.1.11",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
+    "ngx-infinite-scroll": "^8.0.1",
     "path": "^0.12.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
