--- a/package.json
+++ b/package.json
@@ -29,9 +29,13 @@
     "angular-jwt": "^0.1.11",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.4.1",
     "ngx-infinite-scroll": "^8.0.1",
+    "ngx-owl-carousel": "^2.0.7",
+    "owl.carousel": "^2.3.4",
     "path": "^0.12.7",
     "rxjs": "~6.4.0",
+    "script-loader": "^0.7.2",
     "tslib": "^1.10.0",
     "typescript": "~3.5.3",
     "yarn": "^1.19.1",
