add lazy loading sizing to images

--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,9 @@
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
-              "./node_modules/owl.carousel/dist/owl.carousel.min.js"
+              "./node_modules/owl.carousel/dist/owl.carousel.min.js",
+              "./node_modules/lazysizes/lazysizes.min.js"
+
             ]
           },
           "configurations": {
@@ -106,7 +108,8 @@
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
-              "./node_modules/owl.carousel/dist/owl.carousel.min.js"
+              "./node_modules/owl.carousel/dist/owl.carousel.min.js",
+              "node_modules/lazysizes/lazysizes.min.js"
             ]
           }
         },
