--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
+    "lazysizes": "^5.2.0",
     "ngx-infinite-scroll": "^8.0.1",
     "ngx-owl-carousel": "^2.0.7",
     "owl.carousel": "^2.3.4",
