--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@auth0/angular-jwt": "^3.0.1",
     "@auth0/auth0-spa-js": "^1.6.4",
     "angular-jwt": "^0.1.11",
+    "blueimp-canvas-to-blob": "^3.17.0",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "lazysizes": "^5.2.0",
+    "ng2-img-max": "^2.2.1",
     "ngx-infinite-scroll": "^8.0.1",
     "ngx-owl-carousel": "^2.0.7",
     "owl.carousel": "^2.3.4",
