--- a/angular.json
+++ b/angular.json
@@ -31,8 +31,8 @@
             "styles": [
               "./node_modules/owl.carousel/dist/assets/owl.carousel.min.css",
               "./node_modules/owl.carousel/dist/assets/owl.theme.default.min.css",
-              "src/styles.css",
-              "bootstrap.min.css"
+              "./src/styles.css",
+              "./bootstrap-purified/bootstrap.min.css"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
@@ -107,8 +107,8 @@
             "styles": [
               "./node_modules/owl.carousel/dist/assets/owl.carousel.min.css",
               "./node_modules/owl.carousel/dist/assets/owl.theme.default.min.css",
-              "src/styles.css",
-              "bootstrap.min.css"
+              "./src/styles.css",
+              "./bootstrap-purified/bootstrap.min.css"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
@@ -142,7 +142,7 @@
             }
           }
         }
-      }
+     }
     }
   },
   "defaultProject": "video-portfolio-app"
