--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "angular-jwt": "^0.1.11",
     "blueimp-canvas-to-blob": "^3.17.0",
     "express": "^4.17.1",
+    "gulp": "^4.0.2",
+    "gulp-purifycss": "^0.2.0",
     "hammerjs": "^2.0.8",
     "lazysizes": "^5.2.0",
     "ng2-img-max": "^2.2.1",
@@ -53,6 +55,7 @@
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "enhanced-resolve": "^3.3.0",
+    "gulp-clean-css": "^4.3.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
