--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 # dependencies
 /node_modules
 
+/dist
+
 # IDEs and editors
 /.idea
 .project
@@ -37,3 +39,5 @@ testem.log
 #System Files
 .DS_Store
 Thumbs.db
+
+/package-lock.json
