add reel-people.com to dataGroup

--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -31,7 +31,8 @@
     {
       "name": "app",
       "urls":[ 
-        "/**"
+        "/**",
+        "www.reel-people.com/*"
       ],
       "cacheConfig": {
         "maxSize": 100,
