--- a/angular.json
+++ b/angular.json
@@ -29,8 +29,11 @@
               "src/manifest.webmanifest"
             ],
             "styles": [
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "./node_modules/owl.carousel/dist/assets/owl.carousel.min.css",
               "./node_modules/owl.carousel/dist/assets/owl.theme.default.min.css",
+              "./node_modules/intl-tel-input/build/css/intlTelInput.css",
               "./src/styles.css",
               "./bootstrap-purified/bootstrap.min.css"
             ],
@@ -38,7 +41,6 @@
               "./node_modules/jquery/dist/jquery.min.js",
               "./node_modules/owl.carousel/dist/owl.carousel.min.js",
               "./node_modules/lazysizes/lazysizes.min.js"
-
             ]
           },
           "configurations": {
@@ -105,8 +107,11 @@
               "src/manifest.webmanifest"
             ],
             "styles": [
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "./node_modules/owl.carousel/dist/assets/owl.carousel.min.css",
               "./node_modules/owl.carousel/dist/assets/owl.theme.default.min.css",
+              "./node_modules/intl-tel-input/build/css/intlTelInput.css",
               "./src/styles.css",
               "./bootstrap-purified/bootstrap.min.css"
             ],
@@ -142,7 +147,7 @@
             }
           }
         }
-     }
+      }
     }
   },
   "defaultProject": "video-portfolio-app"
