--- a/package.json
+++ b/package.json
@@ -29,13 +29,18 @@
     "@auth0/auth0-spa-js": "^1.6.4",
     "angular-jwt": "^0.1.11",
     "blueimp-canvas-to-blob": "^3.17.0",
+    "bootstrap": "4.1.1",
     "express": "^4.17.1",
+    "google-libphonenumber": "^3.2.8",
     "gulp": "^4.0.2",
     "gulp-purifycss": "^0.2.0",
     "hammerjs": "^2.0.8",
+    "intl-tel-input": "^14.1.0",
     "lazysizes": "^5.2.0",
     "ng2-img-max": "^2.2.1",
+    "ngx-bootstrap": "^5.5.0",
     "ngx-infinite-scroll": "^8.0.1",
+    "ngx-intl-tel-input": "^2.3.4",
     "ngx-owl-carousel": "^2.0.7",
     "owl.carousel": "^2.3.4",
     "path": "^0.12.7",
