--- a/angular.json
+++ b/angular.json
@@ -29,13 +29,10 @@
               "src/manifest.webmanifest"
             ],
             "styles": [
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "./node_modules/owl.carousel/dist/assets/owl.carousel.min.css",
               "./node_modules/owl.carousel/dist/assets/owl.theme.default.min.css",
               "./node_modules/intl-tel-input/build/css/intlTelInput.css",
-              "./src/styles.css",
-              "./bootstrap-purified/bootstrap.min.css"
+              "./src/styles.scss"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
@@ -107,13 +104,10 @@
               "src/manifest.webmanifest"
             ],
             "styles": [
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "./node_modules/owl.carousel/dist/assets/owl.carousel.min.css",
               "./node_modules/owl.carousel/dist/assets/owl.theme.default.min.css",
               "./node_modules/intl-tel-input/build/css/intlTelInput.css",
-              "./src/styles.css",
-              "./bootstrap-purified/bootstrap.min.css"
+              "./src/styles.scss"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
