--- a/package.json
+++ b/package.json
@@ -28,15 +28,12 @@
     "@auth0/angular-jwt": "^3.0.1",
     "@auth0/auth0-spa-js": "^1.6.4",
     "angular-jwt": "^0.1.11",
-    "blueimp-canvas-to-blob": "^3.17.0",
-    "bootstrap": "4.1.1",
+    "bootstrap": "^4.4.1",
     "express": "^4.17.1",
     "google-libphonenumber": "^3.2.8",
     "gulp": "^4.0.2",
     "gulp-purifycss": "^0.2.0",
-    "hammerjs": "^2.0.8",
     "intl-tel-input": "^14.1.0",
-    "lazysizes": "^5.2.0",
     "ng2-img-max": "^2.2.1",
     "ngx-bootstrap": "^5.5.0",
     "ngx-infinite-scroll": "^8.0.1",
@@ -45,10 +42,8 @@
     "owl.carousel": "^2.3.4",
     "path": "^0.12.7",
     "rxjs": "~6.4.0",
-    "script-loader": "^0.7.2",
     "tslib": "^1.10.0",
     "typescript": "~3.5.3",
-    "yarn": "^1.19.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
