--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp": "^4.0.2",
     "gulp-purifycss": "^0.2.0",
     "intl-tel-input": "^14.1.0",
+    "lazysizes": "^5.2.0",
     "ng2-img-max": "^2.2.1",
     "ngx-bootstrap": "^5.5.0",
     "ngx-infinite-scroll": "^8.0.1",
