add back icons for serviceworker

--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -17,7 +17,7 @@
     }, {
       "name": "assets",
       "installMode": "lazy",
-      "updateMode": "lazy",
+      "updateMode": "prefetch",
       "resources": {
         "files": [
           "/assets/**",
