--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
-    "@angular/pwa": "^0.900.6",
+    "@angular/pwa": "^0.901.0",
     "@angular/router": "~8.2.13",
-    "@angular/service-worker": "~8.2.13",
+    "@angular/service-worker": "^8.2.14",
     "@auth0/angular-jwt": "^3.0.1",
     "@auth0/auth0-spa-js": "^1.6.4",
     "angular-jwt": "^0.1.11",
