dont load jquery async

--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,8 @@
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
-              "./node_modules/owl.carousel/dist/owl.carousel.min.js"
+              "./node_modules/owl.carousel/dist/owl.carousel.min.js",
+              "./node_modules/lazysizes/lazysizes.min.js"
             ]
           },
           "configurations": {
@@ -112,7 +113,8 @@
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
-              "./node_modules/owl.carousel/dist/owl.carousel.min.js"
+              "./node_modules/owl.carousel/dist/owl.carousel.min.js",
+              "./node_modules/lazysizes/lazysizes.min.js"
             ]
           }
         },
