--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "@angular/animations": "~8.2.13",
     "@angular/cdk": "~8.2.3",
-    "@angular/cli": "~8.3.18",
     "@angular/common": "~8.2.13",
     "@angular/compiler": "~8.2.13",
     "@angular/compiler-cli": "~8.2.13",
@@ -38,7 +37,6 @@
     "ngx-intl-tel-input": "^2.3.4",
     "ngx-owl-carousel": "^2.0.7",
     "owl.carousel": "^2.3.4",
-    "path": "^0.12.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "typescript": "~3.5.3",
@@ -46,6 +44,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.18",
+    "@angular/cli": "^8.3.2",
     "@angular/language-service": "~8.2.13",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
