add mp4 to lazy load

--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -5,13 +5,15 @@
     {
       "name": "app",
       "installMode": "lazy",
+      "updateMode": "lazy",
       "resources": {
         "files": [
           "/favicon.ico",
           "/index.html",
           "/manifest.webmanifest",
           "/*.css",
-          "/*.js"
+          "/*.js",
+          "/*.mp4"
         ]
       }
     }, {
